@@ -87,6 +87,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>--enable-preview</argLine>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
